Fix api-config fallback to use Render backend URL instead of Vercel frontend

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,6 +1,11 @@
 # Example Backend .env for local development (DO NOT commit .env)
-MONGODB_URI = mongodb+srv://hyperxaxis_db_user:<DB_PASSWORD>@cluster0.kzq6tsi.mongodb.net/uber-video?retryWrites=true&w=majority
-JWT_SECRET = your_dev_jwt_secret
+# MongoDB connection string - get your credentials from MongoDB Atlas
+MONGODB_URI = mongodb+srv://<username>:<password>@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority
+# Frontend URL for CORS - set to your local frontend URL in dev
 FRONTEND_URL = http://localhost:3000
-ORS_API_KEY = <your_ors_key_here>
+# JWT secret - use a long random string in production
+JWT_SECRET = your_super_secret_jwt_key_here
+# OpenRouteService API key (optional) - get one from https://openrouteservice.org/
+ORS_API_KEY = <your_ors_api_key_here>
+# Server port
 PORT = 5000
